--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass-loader": "^14.1.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
+    "vite-plugin-pwa": "^0.19.2",
     "vue-tsc": "^1.8.27"
   }
 }
